--- a/pages/goodLesson/goodLessonList/goodLessonList.wxml
+++ b/pages/goodLesson/goodLessonList/goodLessonList.wxml
@@ -1,6 +1,6 @@
 <import src='../../../templates/moreData/moreData' />
 <view class='lessonBanner'>
-    <image src='https://wise.oss-cn-hangzhou.aliyuncs.com/app-static/lesson_one_banner.png' mode='scaleToFill' />
+    <image src='http://cdn.zhihuizhaosheng.com/app-static/lesson_one_banner.png' mode='scaleToFill' />
 </view>
 <view class='contentList' bindtap='toListInfo' data-actid='{{item.act_nice_id}}' wx:for='{{pageData}}' wx:key='{{item.act_nice_id}}'>
     <view class='contentListLeft'>
