--- a/pages/manageCenters/lessonCourseEdit/lessonCourseEdit.wxss
+++ b/pages/manageCenters/lessonCourseEdit/lessonCourseEdit.wxss
@@ -100,6 +100,11 @@
     margin-left:20rpx;
     margin-bottom:20rpx;
     display:inline-block;
+    vertical-align:top;
+    font-size:60rpx;
+    font-weight:bold;
+    color:#7b7b7b;
+    text-align:center;
 }
 .actImage{
     width:200rpx;
