--- a/templates/indexModel/indexModel.wxml
+++ b/templates/indexModel/indexModel.wxml
@@ -52,7 +52,7 @@
 </template>
 <!-- 美术 -->
 <template name='three'>
-    <view class='threeData' style='background-image:url("https://wise.oss-cn-hangzhou.aliyuncs.com/app-static/ballet.png");'>
+    <view class='threeData' style='background-image:url("http://cdn.zhihuizhaosheng.com/app-static/ballet.png");'>
         <view class='threeBanner'>
             <swiper indicator-dots circular autoplay>
                 <swiper-item wx:for='{{banner}}' wx:key='{{index}}'>
@@ -77,7 +77,7 @@
                 <view>{{item.name}}</view>
             </view>
         </view>
-        <view class='fourTitle'><image src='https://wise.oss-cn-hangzhou.aliyuncs.com/app-static/title/taiquandao_title.png' mode='aspectFit'></image></view>
+        <view class='fourTitle'><image src='http://cdn.zhihuizhaosheng.com/app-static/title/taiquandao_title.png' mode='aspectFit'></image></view>
         <view class='elevenContent' wx:for='{{lessons}}' bindtap='toCourseInfo' data-id='{{item.id}}' wx:key='{{item.id}}'>
             <view class='leftImage'>
                 <image src='{{item.cover.url + "?x-oss-process=image/resize,m_fill,w_140,h_90,limit_0/auto-orient,1/quality,q_100"}}' mode='aspectFill'></image>
@@ -102,7 +102,7 @@
                 <view class='fiveNavbottom'>{{item.name}}</view>
             </view>
         </view>
-        <view class='fiveTitle'><image src='https://wise.oss-cn-hangzhou.aliyuncs.com/app-static/title/fiveTitle.png' mode='aspectFit'></image></view>
+        <view class='fiveTitle'><image src='http://cdn.zhihuizhaosheng.com/app-static/title/fiveTitle.png' mode='aspectFit'></image></view>
         <view class='sixLesson'>
             <view class='sixLessonChild' wx:for='{{lessons}}' bindtap='toCourseInfo' data-id='{{item.id}}' wx:key='{{item.id}}'>
                 <view class='sixLessonTop'><image src='{{item.cover.url + "?x-oss-process=image/resize,m_fill,w_183,h_80,limit_0/auto-orient,1/quality,q_100" }}' mode='scaleToFill'></image></view>
@@ -124,7 +124,7 @@
                 <view class='sixNavChildRight'><image src='{{item.icon}}' mode='scaleToFill'></image></view>
             </view>
         </view>
-        <view class='sixTitle'><image src='https://wise.oss-cn-hangzhou.aliyuncs.com/app-static/title/sixTitle.png' mode='aspectFit'></image></view>
+        <view class='sixTitle'><image src='http://cdn.zhihuizhaosheng.com/app-static/title/sixTitle.png' mode='aspectFit'></image></view>
         <view class='sixLesson'>
             <view class='sixLessonChild' wx:for='{{lessons}}' bindtap='toCourseInfo' data-id='{{item.id}}' wx:key='{{item.id}}'>
                 <view class='sixLessonTop'><image src='{{item.cover.url + "?x-oss-process=image/resize,m_fill,w_183,h_80,limit_0/auto-orient,1/quality,q_100" }}' mode='scaleToFill'></image></view>
@@ -146,7 +146,7 @@
                 <view><image src='{{item.icon}}' mode='scaleToFill'></image></view>
             </view>
         </view>
-        <view class='sevenTitle'><image src='https://wise.oss-cn-hangzhou.aliyuncs.com/app-static/title/sevenTitle.png' mode='aspectFit'></image></view>
+        <view class='sevenTitle'><image src='http://cdn.zhihuizhaosheng.com/app-static/title/sevenTitle.png' mode='aspectFit'></image></view>
         <view class='sixLesson'>
             <view class='sixLessonChild' wx:for='{{lessons}}' bindtap='toCourseInfo' data-id='{{item.id}}' wx:key='{{item.id}}'>
                 <view class='sixLessonTop'><image src='{{item.cover.url + "?x-oss-process=image/resize,m_fill,w_183,h_80,limit_0/auto-orient,1/quality,q_100" }}' mode='scaleToFill'></image></view>
@@ -168,7 +168,7 @@
                 <view><image src='{{item.icon}}' mode='scaleToFill'></image></view>
             </view>
         </view>
-        <view class='eightTitle'><image src='https://wise.oss-cn-hangzhou.aliyuncs.com/app-static/title/eightTitle.png' mode='aspectFit'></image></view>
+        <view class='eightTitle'><image src='http://cdn.zhihuizhaosheng.com/app-static/title/eightTitle.png' mode='aspectFit'></image></view>
         <view class='sixLesson'>
             <view class='sixLessonChild' wx:for='{{lessons}}' bindtap='toCourseInfo' data-id='{{item.id}}' wx:key='{{item.id}}'>
                 <view class='sixLessonTop'><image src='{{item.cover.url + "?x-oss-process=image/resize,m_fill,w_183,h_80,limit_0/auto-orient,1/quality,q_100" }}' mode='scaleToFill'></image></view>
@@ -190,7 +190,7 @@
                 <view>{{item.name}}</view>
             </view>
         </view>
-        <view class='nineTitle'><image src='https://wise.oss-cn-hangzhou.aliyuncs.com/app-static/title/nineTitle.png' mode='aspectFit'></image></view>
+        <view class='nineTitle'><image src='http://cdn.zhihuizhaosheng.com/app-static/title/nineTitle.png' mode='aspectFit'></image></view>
         <view class='sixLesson'>
             <view class='sixLessonChild' wx:for='{{lessons}}' bindtap='toCourseInfo' data-id='{{item.id}}' wx:key='{{item.id}}'>
                 <view class='sixLessonTop'><image src='{{item.cover.url + "?x-oss-process=image/resize,m_fill,w_183,h_80,limit_0/auto-orient,1/quality,q_100" }}' mode='scaleToFill'></image></view>
@@ -207,12 +207,12 @@
 <template name='ten'>
     <view class='tenWrap'>
         <view class='tenNav'>
-            <view wx:for='{{home}}' data-url='{{item.url}}' bindtap='nav' wx:key='{{index}}' style='background-image:url("https://wise.oss-cn-hangzhou.aliyuncs.com/app-static/title/tooth_shadow.png");background-size:100% 100%;background-repeat:no-repeat;'>
+            <view wx:for='{{home}}' data-url='{{item.url}}' bindtap='nav' wx:key='{{index}}' style='background-image:url("http://cdn.zhihuizhaosheng.com/app-static/title/tooth_shadow.png");background-size:100% 100%;background-repeat:no-repeat;'>
                 <view><image src='{{item.icon}}' mode='scaleToFill'></image></view>
                 <view>{{item.name}}</view>
             </view>
         </view>
-        <view class='nineTitle'><image src='https://wise.oss-cn-hangzhou.aliyuncs.com/app-static/title/tenTitle.png' mode='aspectFit'></image></view>
+        <view class='nineTitle'><image src='http://cdn.zhihuizhaosheng.com/app-static/title/tenTitle.png' mode='aspectFit'></image></view>
         <view class='sixLesson'>
             <view class='sixLessonChild' wx:for='{{lessons}}' bindtap='toCourseInfo' data-id='{{item.id}}' wx:key='{{item.id}}'>
                 <view class='sixLessonTop'><image src='{{item.cover.url + "?x-oss-process=image/resize,m_fill,w_183,h_80,limit_0/auto-orient,1/quality,q_100" }}' mode='scaleToFill'></image></view>
@@ -234,7 +234,7 @@
                 <view>{{item.name}}</view>
             </view>
         </view>
-        <view class='elevenTitle'><image src='https://wise.oss-cn-hangzhou.aliyuncs.com/app-static/title/elevenTitle.png' mode='aspectFit'></image></view>
+        <view class='elevenTitle'><image src='http://cdn.zhihuizhaosheng.com/app-static/title/elevenTitle.png' mode='aspectFit'></image></view>
         <view class='elevenContent' wx:for='{{lessons}}' bindtap='toCourseInfo' data-id='{{item.id}}' wx:key='{{item.id}}'>
             <view class='leftImage'>
                 <image src='{{item.cover.url + "?x-oss-process=image/resize,m_fill,w_140,h_90,limit_0/auto-orient,1/quality,q_100"}}' mode='aspectFill'></image>
@@ -258,7 +258,7 @@
                 <view>{{item.name}}</view>
             </view>
         </view>
-        <view class='twelveTitle'><image src='https://wise.oss-cn-hangzhou.aliyuncs.com/app-static/title/twelveTitle.png' mode='aspectFit'></image></view>
+        <view class='twelveTitle'><image src='http://cdn.zhihuizhaosheng.com/app-static/title/twelveTitle.png' mode='aspectFit'></image></view>
         <view class='twelveContent' wx:for='{{lessons}}' bindtap='toCourseInfo' data-id='{{item.id}}' wx:key='{{item.id}}'>
             <view class='leftImage'>
                 <image src='{{item.cover.url + "?x-oss-process=image/resize,m_fill,w_140,h_90,limit_0/auto-orient,1/quality,q_100"}}' mode='aspectFill'></image>
@@ -282,7 +282,7 @@
                 <view>{{item.name}}</view>
             </view>
         </view>
-        <view class='twelveTitle'><image src='https://wise.oss-cn-hangzhou.aliyuncs.com/app-static/title/thirteenTitle.png' mode='aspectFit'></image></view>
+        <view class='twelveTitle'><image src='http://cdn.zhihuizhaosheng.com/app-static/title/thirteenTitle.png' mode='aspectFit'></image></view>
         <view class='twelveContent' wx:for='{{lessons}}' bindtap='toCourseInfo' data-id='{{item.id}}' wx:key='{{item.id}}'>
             <view class='leftImage'>
                 <image src='{{item.cover.url + "?x-oss-process=image/resize,m_fill,w_140,h_90,limit_0/auto-orient,1/quality,q_100"}}' mode='aspectFill'></image>
@@ -306,7 +306,7 @@
                 <view>{{item.name}}</view>
             </view>
         </view>
-        <view class='fourteenTitle'><image src='https://wise.oss-cn-hangzhou.aliyuncs.com/app-static/title/fourteenTitle.png' mode='aspectFit'></image></view>
+        <view class='fourteenTitle'><image src='http://cdn.zhihuizhaosheng.com/app-static/title/fourteenTitle.png' mode='aspectFit'></image></view>
         <view class='twelveContent' wx:for='{{lessons}}' bindtap='toCourseInfo' data-id='{{item.id}}' wx:key='{{item.id}}'>
             <view class='leftImage'>
                 <image src='{{item.cover.url + "?x-oss-process=image/resize,m_fill,w_140,h_90,limit_0/auto-orient,1/quality,q_100"}}' mode='aspectFill'></image>
@@ -330,7 +330,7 @@
                 <view>{{item.name}}</view>
             </view>
         </view>
-        <view class='fourteenTitle'><image src='https://wise.oss-cn-hangzhou.aliyuncs.com/app-static/title/fiveteenTitle.png' mode='aspectFit'></image></view>
+        <view class='fourteenTitle'><image src='http://cdn.zhihuizhaosheng.com/app-static/title/fiveteenTitle.png' mode='aspectFit'></image></view>
         <view class='twelveContent' wx:for='{{lessons}}' bindtap='toCourseInfo' data-id='{{item.id}}' wx:key='{{item.id}}'>
             <view class='leftImage'>
                 <image src='{{item.cover.url + "?x-oss-process=image/resize,m_fill,w_140,h_90,limit_0/auto-orient,1/quality,q_100"}}' mode='aspectFill'></image>
@@ -354,7 +354,7 @@
                 <view class='sixteenNavWrapBottom'><image image src='{{item.icon}}' mode='scaleToFill'></image></view>
             </view>
         </view>
-        <view class='sixteenTitle'><image src='https://wise.oss-cn-hangzhou.aliyuncs.com/app-static/title/sixteenTitle.png'></image></view>
+        <view class='sixteenTitle'><image src='http://cdn.zhihuizhaosheng.com/app-static/title/sixteenTitle.png'></image></view>
         <view class='sixLesson'>
             <view class='sixLessonChild' wx:for='{{lessons}}' bindtap='toCourseInfo' data-id='{{item.id}}' wx:key='{{item.id}}'>
                 <view class='sixLessonTop'><image src='{{item.cover.url + "?x-oss-process=image/resize,m_fill,w_183,h_80,limit_0/auto-orient,1/quality,q_100" }}' mode='scaleToFill'></image></view>
@@ -376,7 +376,7 @@
                 <view>{{item.name}}</view>
             </view>
         </view>
-        <view class='seventeenTitle'><image src='https://wise.oss-cn-hangzhou.aliyuncs.com/app-static/title/wushu-kid-title.png' mode='aspectFit'></image></view>
+        <view class='seventeenTitle'><image src='http://cdn.zhihuizhaosheng.com/app-static/title/wushu-kid-title.png' mode='aspectFit'></image></view>
         <view class='twelveContent' wx:for='{{lessons}}' bindtap='toCourseInfo' data-id='{{item.id}}' wx:key='{{item.id}}'>
             <view class='leftImage'>
                 <image src='{{item.cover.url + "?x-oss-process=image/resize,m_fill,w_140,h_90,limit_0/auto-orient,1/quality,q_100"}}' mode='aspectFill'></image>
