--- a/pages/manageCenters/oneLessonEdit/oneLessonEdit.wxml
+++ b/pages/manageCenters/oneLessonEdit/oneLessonEdit.wxml
@@ -63,7 +63,7 @@
         <view class='lessonEditThree'>
             <view class='lessonEditOneTitle'>活动图片</view>
             <view class='lessonEditThreeContent'>
-                <view bindtap='choosePic' class='chooseImage'></view>
+                <view bindtap='choosePic' class='chooseImage'>+</view>
                 <view wx:for='{{actImage}}' style='position:relative' class='chooseImage'>
                     <image src='{{item}}' mode='scaleToFill'></image>
                     <view class='delImage' bindtap='delImage' data-index='{{index}}'>×</view>
@@ -73,7 +73,7 @@
         <view class='lessonEditThree'>
             <view class='lessonEditOneTitle'>封面图片</view>
             <view class='lessonEditThreeContent'>
-                <view bindtap='chooseCoverPic' class='chooseImage'></view>
+                <view bindtap='chooseCoverPic' class='chooseImage'>+</view>
                 <view style='display:{{isCover}}' class='jiayou' class='chooseImage'>
                     <image src='{{coverImage}}' mode='scaleToFill'></image>
                 </view>
