--- a/pages/videoClass/videoClassManList/videoClassManList.wxml
+++ b/pages/videoClass/videoClassManList/videoClassManList.wxml
@@ -1,3 +1,4 @@
+<import src='../../../templates/moreData/moreData' />
 <view class='manListWrap' bindtap='showOpt' data-id='0' data-title='{{item.title}}' wx:for='{{pageData}}' data-actid='{{item.id}}' data-acttag='{{item.act_tag}}'>
     <view class='manListImage'><image src='{{item.cover.url}}' mode='widthFix'></image></view>
     <view class='manListContent'>
@@ -25,4 +26,4 @@
     </view>
 </view>
 <!-- 更多 -->
-<button class='{{className}}' bindtap='moreData' data-text='{{btnText}}'>{{btnText}}</button>
+<template  is="moreDataBtn" data='{{btnText:btnText}}' />
