--- a/pages/videoClass/videoClassManList/videoClassManList.wxss
+++ b/pages/videoClass/videoClassManList/videoClassManList.wxss
@@ -1,4 +1,5 @@
 @import '../../../utils/iconFont.wxss';
+@import '../../../templates/moreData/moreData.wxss';
 page{
     background:#F7F7F7;
     padding-bottom:120rpx;
