--- a/pages/videos/manVideoList/manVideoList.wxml
+++ b/pages/videos/manVideoList/manVideoList.wxml
@@ -1,3 +1,4 @@
+<import src='../../../templates/moreData/moreData' />
 <view class='empty'></view>
 <view class='manListContent' wx:for='{{pageData}}' wx:key='{{index}}'>
     <view class='manListContentTop' bindtap='toListInfo' data-actid='{{item.id}}'>{{item.title}}</view>
@@ -21,4 +22,4 @@
     <view class='manListBottomRight' bindtap='chooseModel'>发布新祝福</view>
 </view>
 <!-- 更多 -->
-<button class='{{className}}' bindtap='moreData' data-text='{{btnText}}'>{{btnText}}</button>
+<template  is="moreDataBtn" data='{{btnText:btnText}}' />
