--- a/pages/collectAct/collectActUserInfo/collectActUserInfo.wxml
+++ b/pages/collectAct/collectActUserInfo/collectActUserInfo.wxml
@@ -7,35 +7,35 @@
         <view class='laudActImageTitle'><text>{{pageData.title}}</text></view>
         <view class='laudActImages'>
             <view class='laudActImagesContent'>
-                <view><image src='../../../icon/01.png'></image></view>
+                <view><image src='http://cdn.zhihuizhaosheng.com/app-static/sugar/01.png'></image></view>
                 <view>
                     <text>彩虹味</text>
                     <text>共 <text style='color:red'>{{pageData.joiner.rainbow_sugar_amount}}</text> 个</text>
                 </view>
             </view>
             <view class='laudActImagesContent'>
-                <view><image src='../../../icon/02.png'></image></view>
+                <view><image src='http://cdn.zhihuizhaosheng.com/app-static/sugar/02.png'></image></view>
                 <view>
                     <text>草莓味</text>
                     <text>共 <text style='color:red'>{{pageData.joiner.strawberry_sugar_amount}}</text> 个</text>
                 </view>
             </view>
             <view class='laudActImagesContent'>
-                <view><image src='../../../icon/03.png'></image></view>
+                <view><image src='http://cdn.zhihuizhaosheng.com/app-static/sugar/03.png'></image></view>
                 <view>
                     <text>芒果味</text>
                     <text>共 <text style='color:red'>{{pageData.joiner.mango_sugar_amount}}</text> 个</text>
                 </view>
             </view>
             <view class='laudActImagesContent'>
-                <view><image src='../../../icon/04.png'></image></view>
+                <view><image src='http://cdn.zhihuizhaosheng.com/app-static/sugar/04.png'></image></view>
                 <view>
                     <text>西瓜味</text>
                     <text>共 <text style='color:red'>{{pageData.joiner.watermelon_sugar_amount}}</text> 个</text>
                 </view>
             </view>
             <view class='laudActImagesContent'>
-                <view><image src='../../../icon/05.png'></image></view>
+                <view><image src='http://cdn.zhihuizhaosheng.com/app-static/sugar/05.png'></image></view>
                 <view>
                     <text>蓝莓味</text>
                     <text>共 <text style='color:red'>{{pageData.joiner.blueberry_sugar_amount}}</text> 个</text>
